test/valid/Figures/Circle.plume
/**
 * @author Vasco T. Vasconcelos
 * @version $Id: Circle.plume 390 2012-05-21 15:00:43Z tcomp000 $
 */
class Circle extends Figure is

  field radius : Integer
  
  method override area : () -> Integer is
    3/*.14*/ * radius * radius